[gd_scene load_steps=6 format=2]

[ext_resource path="res://main/main_scene.gd" type="Script" id=1]
[ext_resource path="res://main/menu_scene.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/background.tscn" type="PackedScene" id=3]
[ext_resource path="res://main/pigeon_scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://main/game_over_scene.tscn" type="PackedScene" id=5]

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="menu_scene" parent="." instance=ExtResource( 2 )]

[node name="background_scene" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.51
autostart = true

[node name="pigeon_scene" parent="." instance=ExtResource( 4 )]
position = Vector2( 545.103, 1572.41 )

[node name="game_over_scene" parent="." instance=ExtResource( 5 )]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
